--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,23 @@
+<!--
+FILE: /c:/local/angulardev/mywebsite/src/index.html
+
+DESCRIPTION:
+This is the main HTML entry point for the Angular application. It serves as the root document
+that loads the Angular application and its dependencies. This file is typically served by the
+web server and processed by the Angular framework to bootstrap the application.
+
+PURPOSE:
+- Defines the HTML5 document structure for the application
+- Contains the root app component where Angular mounts the application
+- Includes meta tags for browser compatibility and responsive design
+- Links to external stylesheets and resources
+- May include inline scripts or references to bundled JavaScript files
+
+USAGE:
+This file is automatically processed during the Angular build process and should not be
+modified directly unless adding global meta tags, external scripts, or base HTML structure
+changes that apply to the entire application.
+-->
 <!doctype html>
 <html lang="en">
 <head>
