--- a/src/assets/demos/store/index.html
+++ b/src/assets/demos/store/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-critters-container>
 <head>
   <meta charset="utf-8">
-  <title>ServiceBusiness</title>
+  <title>StoreBusiness</title>
   <base href="/assets/demos/store/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -10,5 +10,5 @@
 </style><link rel="stylesheet" href="styles-BFGUZXC6.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-BFGUZXC6.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-EJ46DL77.js" type="module"></script><script src="main-WESJUYIY.js" type="module"></script></body>
+<script src="polyfills-EJ46DL77.js?v=3" type="module"></script><script src="main-WPF7SCZA.js?v=3" type="module"></script></body>
 </html>
