--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,11 @@ changes that apply to the entire application.
   <meta charset="utf-8">
   <title>Daniel Seguin - Senior IT Consultant</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="theme-color" content="#2c3e50">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   
   <!-- Start Single Page Apps for GitHub Pages -->
